--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  get: ^4.7.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   build_runner: 2.4.13
